fix: fix home text align

--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -33,6 +33,7 @@
     padding-right: 20px;
     border-radius: 5px;
     margin-right: 20px;
+    text-align: center;
   }
 
   &-percentage-up {
